--- a/_pgbackup/index_1738547465.html
+++ b/_pgbackup/index_1738547465.html
@@ -560,25 +560,28 @@
                                         <div class="project-info">
                                             <p>Giveaway<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/KgoJzGa.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-hr-promo/videos-hr-promo.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-strong-will-brochure" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-hr-sip" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Newspaper<br/><span>print</span></p>
+                                            <p>Holidays<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/f6YE15d.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-hr-sip/videos-hr-sip.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show promo"><a href="#!projects/promo-christmas" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-hr-thanks" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Merry Christmas<br/><span>promo</span></p>
+                                            <p>Thanksgiving<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/2Rx3PLn.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-hr-thanks/videos-hr-thanks.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show promo"><a href="#!projects/promo-goldentime" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-hyeah" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Golden Time<br/><span>promo</span></p>
+                                            <p>Booking App<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/1zKcGMg.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-hyeah/videos-hyeah.jpg" alt="thumbnail"/> </a>
                             </div>
                             <!-- hide
                             <div class="col-12 col-md-4 project show promo">
@@ -589,41 +592,47 @@
                                     </div> <img src="https://i.imgur.com/Yc6JTcx.jpg" alt="thumbnail"> </a>
                             </div>
                             -->
-                            <div class="col-12 col-md-4 project show promo"><a href="#!projects/promo-lunar-new-year" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-keys" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Lunar New Year 2018<br/><span>promo</span></p>
+                                            <p>Fireworks<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/jjICrS6.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-keys/videos-keys.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show promo"><a href="#!projects/promo-mid-autumn" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-mark" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Mid-Autumn<br/><span>promo</span></p>
+                                            <p>Promotional<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/5R4iIxX.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-mark/videos-mark.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-2018-world-cup" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-peugeot" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>2018 World Cup - Russia<br/><span>sports</span></p>
+                                            <p>Reel<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/p7bDdxG.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-peugeot/videos-peugeot.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-basketball" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web web-design">
+                                <a href="#!projects/web-design-freedom" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Basketball<br/><span>sports</span></p>
+                                            <p>Real Estate<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/qx4p9VF.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-freedom/web-design-freedom-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-domestic" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-hurricane" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Domestic<br/><span>sports</span></p>
+                                            <p>Real Estate Lending<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/yirrNf5.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-hurricane/web-design-hurricane-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-e-sports" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-iwom" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>e-Sports<br/><span>sports</span></p>
+                                            <p>Retail<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/OvvgbZj.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-iwom/web-design-iwom-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-intermilan-sponsor" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
