--- a/projects/web-design-iwom/_pgbackup/index_1738547429.html
+++ b/projects/web-design-iwom/_pgbackup/index_1738547429.html
@@ -5,7 +5,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8"/>
-        <title>Multimedia Designer - Kate Cano</title>
+        <title>Multimedia Designer - Kate</title>
         <!-- Behavioral Meta Data -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
         <!-- Core Meta Data -->
@@ -47,75 +47,97 @@
     </head>
     <body class="project-single">
         <header>
+            <a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
             <div class="meta name">
                 <p><small>kate</small></p>
             </div>
         </header>
         <section id="ajaxpage" class="ajaxpage">
-            <a href="https://minimalisttemplates.com/travel-web-template-01" target="_blank"><img border="0" src="projects/web-design-japan/18.jpg"/></a>
+            <div class="ajaxpage__slider">
+                <ul>
+                    <li>
+                        <a href="web-design-iwom-full.png" target="_blank"><img border="0" src="web-design-iwom-1.jpg"/></a>
+                    </li>
+                    <li>
+                        <a href="web-design-iwom-full.png" target="_blank"><img border="0" src="web-design-iwom-2.jpg"/></a>
+                    </li>
+                </ul>
+            </div>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Japan Travel Tour Package Landing Page</h4>
-                        <h4></h4><small>Web Design</small>
+                        <h4>Retail Landing Page</h4>
+                        <small>Web Design</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
-                        <p></p>
                     </li>
                     <li>
-                        <p>Role<br/>Senior Graphic Designer</p>
+                        <p>Role<br/>Multimedia Graphic Designer</p>
                     </li>
                 </ul>
                 <div class="ajaxpage__content--description">
                     <h3>Objective</h3>
-                    <p>To create an enticing and informative promotional flyer for the Japan Travel Tour, emphasizing the unique experiences and highlights of the tour, and encouraging potential travelers to book their trip.</p>
+                    <p>To create a visually appealing and informative promotional webpage for IWOM Outerwear, highlighting the brand's innovative products and their features, to attract and engage potential customers.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li><strong>Primary Colors:</strong> Light red and white. The light red color evokes a sense of excitement and adventure, while the white background ensures a clean and elegant look.
+                        <li>
+                            <strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
                         </li>
-                        <li><strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
+                        <li>
+                            <strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li><strong>Headings:</strong> Bold and large font size in light red to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
+                        <li>
+                            <strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li>
+                            <strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li><strong>Consistent Structure:</strong> The flyer follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li>
+                            <strong>Consistent Structure:</strong> The webpage follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and sophisticated look.
+                        <li>
+                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
                         </li>
-                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li>
+                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li><strong>High-Quality Images:</strong> Use of high-quality images of iconic Japanese locations, such as temples, markets, and cityscapes, to visually represent the tour highlights. Images are carefully selected to convey the beauty and cultural richness of Japan.
+                        <li>
+                            <strong>High-Quality Images:</strong> Use of high-quality images of the IWOM products and related icons to visually represent the features and benefits of the brand. Images are carefully selected to convey the innovation and functionality of the products.
                         </li>
-                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
+                        <li>
+                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li>
+                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li><strong>Bullet Points:</strong> Use of bullet points to list tour highlights and details for easy readability and quick reference.
+                        <li>
+                            <strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li><strong>Logo Placement:</strong> Prominent placement of the tour company logo to reinforce brand identity and recognition.
+                        <li>
+                            <strong>Logo Placement:</strong> Prominent placement of the IWOM Outerwear logo to reinforce brand identity and recognition.
                         </li>
-                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li>
+                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
-                    <p>The art direction successfully creates an enticing and informative promotional flyer that reflects the excitement and cultural richness of the Japan Travel Tour. The clean and modern design, combined with carefully selected typography, colors, and imagery, ensures that the flyer is not only informative but also visually engaging. This encourages potential travelers to engage with the content and consider booking their trip to Japan.</p>
+                    <p>The art direction successfully creates a visually appealing and informative promotional webpage that reflects the innovation and reliability of IWOM Outerwear. The clean and modern design, combined with carefully selected typography, colors, and imagery, ensures that the webpage is not only informative but also visually engaging. This encourages potential customers to explore the IWOM products and consider making a purchase.</p>
                 </div>
             </div>
         </section>
