--- a/projects/web-design-iwom/index.html
+++ b/projects/web-design-iwom/index.html
@@ -46,8 +46,7 @@
         <script src="../../js/libraries/three.min.js"></script>
     </head>
     <body class="project-single">
-        <header>
-            <a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
+        <header><a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
             <div class="meta name">
                 <p><small>kate</small></p>
             </div>
@@ -55,19 +54,16 @@
         <section id="ajaxpage" class="ajaxpage">
             <div class="ajaxpage__slider">
                 <ul>
-                    <li>
-                        <a href="web-design-iwom-full.png" target="_blank"><img border="0" src="web-design-iwom-1.jpg"/></a>
+                    <li><a href="projects/web-design-iwom/web-design-iwom-full.png" target="_blank"><img border="0" src="projects/web-design-iwom/web-design-iwom-1.jpg"/></a>
                     </li>
-                    <li>
-                        <a href="web-design-iwom-full.png" target="_blank"><img border="0" src="web-design-iwom-2.jpg"/></a>
+                    <li><a href="projects/web-design-iwom/web-design-iwom-full.png" target="_blank"><img border="0" src="projects/web-design-iwom/web-design-iwom-2.jpg"/></a>
                     </li>
                 </ul>
             </div>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Retail Landing Page</h4>
-                        <small>Web Design</small>
+                        <h4>Retail Landing Page</h4><small>Web Design</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
@@ -81,59 +77,46 @@
                     <p>To create a visually appealing and informative promotional webpage for IWOM Outerwear, highlighting the brand's innovative products and their features, to attract and engage potential customers.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li>
-                            <strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
+                        <li><strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
                         </li>
-                        <li>
-                            <strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
+                        <li><strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li>
-                            <strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
+                        <li><strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li>
-                            <strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li>
-                            <strong>Consistent Structure:</strong> The webpage follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li><strong>Consistent Structure:</strong> The webpage follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li>
-                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
+                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
                         </li>
-                        <li>
-                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li>
-                            <strong>High-Quality Images:</strong> Use of high-quality images of the IWOM products and related icons to visually represent the features and benefits of the brand. Images are carefully selected to convey the innovation and functionality of the products.
+                        <li><strong>High-Quality Images:</strong> Use of high-quality images of the IWOM products and related icons to visually represent the features and benefits of the brand. Images are carefully selected to convey the innovation and functionality of the products.
                         </li>
-                        <li>
-                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
+                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li>
-                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li>
-                            <strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
+                        <li><strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li>
-                            <strong>Logo Placement:</strong> Prominent placement of the IWOM Outerwear logo to reinforce brand identity and recognition.
+                        <li><strong>Logo Placement:</strong> Prominent placement of the IWOM Outerwear logo to reinforce brand identity and recognition.
                         </li>
-                        <li>
-                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
