--- a/index.html
+++ b/index.html
@@ -620,23 +620,26 @@
                                         </div>
                                     </div> <img src="projects/web-design-freedom/web-design-freedom-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-domestic" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-hurricane" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Domestic<br/><span>sports</span></p>
+                                            <p>Real Estate Lending<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/yirrNf5.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-hurricane/web-design-hurricane-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-e-sports" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-iwom" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>e-Sports<br/><span>sports</span></p>
+                                            <p>Retail<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/OvvgbZj.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-iwom/web-design-iwom-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-intermilan-sponsor" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-japan" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Inter<br/><span>sports</span></p>
+                                            <p>Travel Tour<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/9RROMcK.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-japan/web-design-japan-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-international" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
