--- a/projects/web-design-japan/_pgbackup/index_1738547511.html
+++ b/projects/web-design-japan/_pgbackup/index_1738547511.html
@@ -51,13 +51,13 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="https://minimalisttemplates.com/travel-web-template-01" target="_blank"><img border="0" src="projects/web-design-japan/18.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="https://minimalisttemplates.com/travel-web-template-01" target="_blank"><img border="0" src="18.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
                         <h4>Japan Travel Tour Package Landing Page</h4>
-                        <h4></h4><small>Web Design</small>
+                        <h4></h4>
+                        <small>Web Design</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
@@ -72,46 +72,59 @@
                     <p>To create an enticing and informative promotional flyer for the Japan Travel Tour, emphasizing the unique experiences and highlights of the tour, and encouraging potential travelers to book their trip.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li><strong>Primary Colors:</strong> Light red and white. The light red color evokes a sense of excitement and adventure, while the white background ensures a clean and elegant look.
+                        <li>
+                            <strong>Primary Colors:</strong> Light red and white. The light red color evokes a sense of excitement and adventure, while the white background ensures a clean and elegant look.
                         </li>
-                        <li><strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
+                        <li>
+                            <strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li><strong>Headings:</strong> Bold and large font size in light red to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
+                        <li>
+                            <strong>Headings:</strong> Bold and large font size in light red to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li>
+                            <strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li><strong>Consistent Structure:</strong> The flyer follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li>
+                            <strong>Consistent Structure:</strong> The flyer follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and sophisticated look.
+                        <li>
+                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and sophisticated look.
                         </li>
-                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li>
+                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li><strong>High-Quality Images:</strong> Use of high-quality images of iconic Japanese locations, such as temples, markets, and cityscapes, to visually represent the tour highlights. Images are carefully selected to convey the beauty and cultural richness of Japan.
+                        <li>
+                            <strong>High-Quality Images:</strong> Use of high-quality images of iconic Japanese locations, such as temples, markets, and cityscapes, to visually represent the tour highlights. Images are carefully selected to convey the beauty and cultural richness of Japan.
                         </li>
-                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
+                        <li>
+                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li>
+                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li><strong>Bullet Points:</strong> Use of bullet points to list tour highlights and details for easy readability and quick reference.
+                        <li>
+                            <strong>Bullet Points:</strong> Use of bullet points to list tour highlights and details for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li><strong>Logo Placement:</strong> Prominent placement of the tour company logo to reinforce brand identity and recognition.
+                        <li>
+                            <strong>Logo Placement:</strong> Prominent placement of the tour company logo to reinforce brand identity and recognition.
                         </li>
-                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li>
+                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
